# chats-apps

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
migrations/: 20240101000000_initital_schema.sql
src/: main.rs
src/db/: pool.rs
src/handlers/: auth.rs  channel.rs  invitation.rs  mod.rs  websocket.rs
src/middleware/: auth.rs
src/models/: channel.rs  invitation.rs  message.rs  mod.rs  user.rs
src/utils/: jwt.rs
