[package]
name = "live-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3.31"
